Added dummyPrint3 method in SampleApexClass

--- a/force-app/main/default/classes/SampleApexClass.cls
+++ b/force-app/main/default/classes/SampleApexClass.cls
@@ -9,4 +9,11 @@ public class SampleApexClass {
         System.debug('its a dummy print2');
         return 2;
     }
+
+     public static Integer dummyPrint3(){
+        System.debug('its a dummy print2');
+        return 2;
+    }
+
+    
 }
